# plot

./: README.md  flake.nix  pyproject.toml
nix/: overlay.nix
src/plot/: capture.py  collect.py  main.py  plot.py  prompts.py  queue.py  settings.py  text.py  utils.py
